--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body, html {
     background: rgba(0,0,0,.8);
     color:aliceblue;
     font-size: 25px;
+    padding: 15px;
   }
   
   .answer-option{
@@ -122,7 +123,7 @@ body, html {
     .quiz-container{
       margin-top: 20vh;
       font-size: 15px;
-      width: 50%;
+      width: 95%;
       height: 50%;
     }
   
